Fix artist bio scrollbar

--- a/src/styles/elements/artist-popup.scss
+++ b/src/styles/elements/artist-popup.scss
@@ -124,6 +124,7 @@
 
         .Bio {
             padding: 0;
+            overflow-x: hidden;
         }
 
         .Image {
